[package]
name = "web_app"
version = "0.1.0"
authors = ["music-brain88 <music.brain88@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
actix-web = "2.0.0"
openssl = "0.10.29"
actix-rt = "1.1.0"
